[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/art_assets/colored_transparent_packed.png" type="Texture" id=1]
[ext_resource path="res://Ball.gd" type="Script" id=2]
[ext_resource path="res://assets/Machine002.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 658, 50, 12, 12 )

[sub_resource type="CircleShape2D" id=2]
radius = 6.5806

[sub_resource type="CircleShape2D" id=3]
radius = 6.84335

[sub_resource type="CircleShape2D" id=4]
radius = 7.85233

[node name="Ball" type="RigidBody2D" groups=[
"bodies",
]]
collision_layer = 4
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="DangerDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="DangerDetect"]
shape = SubResource( 3 )

[node name="BeltHum" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = 6.0

[node name="BeltDetect" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="BeltDetect"]
shape = SubResource( 4 )
[connection signal="body_entered" from="DangerDetect" to="." method="_on_DangerDetect_body_entered"]
[connection signal="body_entered" from="BeltDetect" to="." method="_on_BeltDetect_body_entered"]
[connection signal="body_exited" from="BeltDetect" to="." method="_on_BeltDetect_body_exited"]
